--- a/pages/global.css
+++ b/pages/global.css
@@ -9,8 +9,7 @@
   .border-gradient {
     border: double 1px transparent;
     /* border-radius: 100px; */
-    background-image: linear-gradient(var(--stage-background), var(--stage-background)), 
-                     linear-gradient(to right, var(--stage-border-start), var(--stage-border-end));
+    background-image: linear-gradient(var(--stage-background), var(--stage-background)), linear-gradient(to right, var(--stage-border-start), var(--stage-border-end));
     background-origin: border-box;
     background-clip: padding-box, border-box;
   }
@@ -21,6 +20,10 @@
     linear-gradient(to right, rgba(var(--stage-border-start-rgb), 0.4), rgba(var(--stage-border-end-rgb), 0.4));
     background-origin: border-box;
     background-clip: padding-box, border-box;
+  }
+
+  .h2-title {
+    @apply relative pb-[0.75rem] text-[1rem] font-medium text-white;
   }
 }
 
